manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: siranga
  labels:
    app: siranga
    app.kubernetes.io/name: siranga
spec:
  replicas: 1
  selector:
    matchLabels:
      app: siranga
  template:
    metadata:
      labels:
        app: siranga
      annotations:
        kubectl.kubernetes.io/default-container: siranga
    spec:
      # Service links cause issues with the HTTP_PORT and SSH_PORT env variables
      enableServiceLinks: false
      containers:
        - name: siranga
          image: git.huizinga.dev/dreaded_x/siranga@${DIGEST}
          imagePullPolicy: IfNotPresent
          resources:
            limits:
              cpu: 200m
              memory: 256Mi
            requests:
              cpu: 50m
              memory: 100Mi
          ports:
            - containerPort: 3000
            - containerPort: 2222
          volumeMounts:
            - name: credentials
              readOnly: true
              mountPath: "/secrets/credentials"
            - name: key
              readOnly: true
              mountPath: "/secrets/key"
      volumes:
        - name: credentials
          secret:
            secretName: siranga-lldap-credentials

        - name: key
          secret:
            secretName: siranga-key
