manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: http
spec:
  ports:
    - name: http
      port: 3000
      targetPort: http
  selector:
    app: siranga
---
apiVersion: v1
kind: Service
metadata:
  name: ssh
  annotations:
    external-dns.alpha.kubernetes.io/hostname: tunnel.svc.${domain}
spec:
  type: LoadBalancer
  ports:
    - name: ssh
      port: 22
      targetPort: ssh
  selector:
    app: siranga
