manifests/ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: tunnel
spec:
  entryPoints:
    - websecure
  routes:
    - match: HostRegexp(`^.+\.tunnel\.${domain//./\\.}$`)
      kind: Rule
      services:
        - name: http
          port: 3000
  tls:
    secretName: tunnel-tls
